# SigMiner

./: .gitignore  LICENSE  Makefile  README.md  app.spec  baleine.csv  process_log.txt  pyproject.toml
scripts/: start.sh
sigminer/: app.py  pyinstaller_build.py  test.py
sigminer/auth/: auth_manager.py
sigminer/config/: config_manager.py
sigminer/core/: extraction_worker.py
sigminer/core/email/: email_manager.py
sigminer/core/llm/: multi_modal_llm.py
sigminer/core/models/: extraction.py
sigminer/core/utils/: prompt_models.py
sigminer/ui/: auth_view.py  email_view.py  extraction_view.py  field_form_view.py  main_window.py  settings_view.py
tests/: test_auth_manager.py
