[tool.poetry]
name = "sigminer"
version = "1.0.0"
description = ""
authors = ["James Standbridge <james.standbridge.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
requests = "^2.32.3"
msal = "^1.30.0"
llama-index = "^0.11.13"
pillow = "^10.4.0"
pyqt5 = "^5.15.11"
aiofiles = "^24.1.0"
litellm = "^1.48.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
