[tool.poetry]
name = "sigminer"
version = "1.0.0"
description = ""
authors = ["James Standbridge <james.standbridge.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
requests = "^2.32.3"
msal = "^1.30.0"
llama-index = "^0.11.13"
pillow = "^10.4.0"
pyqt5 = "^5.15.11"
aiofiles = "^24.1.0"
litellm = "^1.48.2"
pytest = "^8.3.3"
coverage = "^7.6.1"
poethepoet = "^0.29.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pyinstaller = "^6.10.0"
ipykernel = "^6.29.5"

[tool.poe.tasks]
test = "pytest -s"
coverage = "sh -c 'coverage run -m pytest && coverage report'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
